src/Language/Futhark/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from src/Language/Futhark/Parser/Parser.y
-----------------------------------------------------------------------------


terminal op is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_prog -> Prog                                (0)
	%start_expression -> Exp                           (1)
	%start_pattern -> TupId                            (2)
	%start_lambda -> FunAbstr                          (3)
	%start_futharktype -> Type                         (4)
	%start_intValue -> IntValue                        (5)
	%start_boolValue -> LogValue                       (6)
	%start_charValue -> CharValue                      (7)
	%start_certValue -> CertValue                      (8)
	%start_stringValue -> StringValue                  (9)
	%start_arrayValue -> ArrayValue                    (10)
	%start_tupleValue -> TupleValue                    (11)
	%start_anyValue -> Value                           (12)
	%start_anyValues -> CatValues                      (13)
	Prog -> FunDecs                                    (14)
	BinOp -> '+'                                       (15)
	BinOp -> '*'                                       (16)
	BinOp -> '/'                                       (17)
	BinOp -> '%'                                       (18)
	BinOp -> '=='                                      (19)
	BinOp -> '<'                                       (20)
	BinOp -> '<='                                      (21)
	BinOp -> '>'                                       (22)
	BinOp -> '>='                                      (23)
	BinOp -> '&&'                                      (24)
	BinOp -> '||'                                      (25)
	BinOp -> pow                                       (26)
	BinOp -> '^'                                       (27)
	BinOp -> '&'                                       (28)
	BinOp -> '|'                                       (29)
	BinOp -> '>>'                                      (30)
	BinOp -> '<<'                                      (31)
	UnOp -> '~'                                        (32)
	UnOp -> '!'                                        (33)
	UnOp -> abs                                        (34)
	UnOp -> signum                                     (35)
	FunDecs -> fun Fun FunDecs                         (36)
	FunDecs -> fun Fun                                 (37)
	Fun -> Type id '(' TypeIds ')' '=' Exp             (38)
	Fun -> Type id '(' ')' '=' Exp                     (39)
	Uniqueness -> '*'                                  (40)
	Uniqueness ->                                      (41)
	Type -> BasicType                                  (42)
	Type -> ArrayType                                  (43)
	Type -> '{' Types '}'                              (44)
	DimDecl -> ',' id                                  (45)
	DimDecl -> ',' intlit                              (46)
	DimDecl ->                                         (47)
	ArrayType -> Uniqueness '[' BasicArrayRowType DimDecl ']'   (48)
	ArrayType -> Uniqueness '[' TupleArrayRowType DimDecl ']'   (49)
	BasicArrayRowType -> BasicType                     (50)
	BasicArrayRowType -> '[' BasicArrayRowType DimDecl ']'   (51)
	TupleArrayRowType -> '{' TupleArrayElemTypes '}'   (52)
	TupleArrayRowType -> '[' TupleArrayRowType DimDecl ']'   (53)
	TupleArrayElemTypes -> TupleArrayElemType          (54)
	TupleArrayElemTypes -> TupleArrayElemType ',' TupleArrayElemTypes   (55)
	TupleArrayElemType -> BasicType                    (56)
	TupleArrayElemType -> ArrayType                    (57)
	TupleArrayElemType -> '{' TupleArrayElemTypes '}'   (58)
	BasicType -> int                                   (59)
	BasicType -> real                                  (60)
	BasicType -> bool                                  (61)
	BasicType -> cert                                  (62)
	BasicType -> char                                  (63)
	Types -> Type ',' Types                            (64)
	Types -> Type                                      (65)
	Types ->                                           (66)
	TypeIds -> Type id ',' TypeIds                     (67)
	TypeIds -> Type id                                 (68)
	Exp -> intlit                                      (69)
	Exp -> reallit                                     (70)
	Exp -> charlit                                     (71)
	Exp -> stringlit                                   (72)
	Exp -> true                                        (73)
	Exp -> false                                       (74)
	Exp -> checked                                     (75)
	Exp -> Id                                          (76)
	Exp -> empty '(' Type ')'                          (77)
	Exp -> '[' Exps ']'                                (78)
	Exp -> TupleExp                                    (79)
	Exp -> Exp '+' Exp                                 (80)
	Exp -> Exp '-' Exp                                 (81)
	Exp -> Exp '*' Exp                                 (82)
	Exp -> Exp '/' Exp                                 (83)
	Exp -> Exp '%' Exp                                 (84)
	Exp -> '-' Exp                                     (85)
	Exp -> '!' Exp                                     (86)
	Exp -> '~' Exp                                     (87)
	Exp -> abs Exp                                     (88)
	Exp -> signum Exp                                  (89)
	Exp -> Exp pow Exp                                 (90)
	Exp -> Exp '>>' Exp                                (91)
	Exp -> Exp '<<' Exp                                (92)
	Exp -> Exp '&&' Exp                                (93)
	Exp -> Exp '||' Exp                                (94)
	Exp -> Exp '&' Exp                                 (95)
	Exp -> Exp '|' Exp                                 (96)
	Exp -> Exp '^' Exp                                 (97)
	Exp -> Exp '==' Exp                                (98)
	Exp -> Exp '<' Exp                                 (99)
	Exp -> Exp '<=' Exp                                (100)
	Exp -> Exp '>' Exp                                 (101)
	Exp -> Exp '>=' Exp                                (102)
	Exp -> if Exp then Exp else Exp                    (103)
	Exp -> id '(' Exps ')'                             (104)
	Exp -> id '(' ')'                                  (105)
	Exp -> iota '(' Exp ')'                            (106)
	Exp -> size '(' NaturalInt ',' Exp ')'             (107)
	Exp -> replicate '(' Exp ',' Exp ')'               (108)
	Exp -> reshape '(' '(' Exps ')' ',' Exp ')'        (109)
	Exp -> rearrange '(' '(' NaturalInts ')' ',' Exp ')'   (110)
	Exp -> transpose '(' Exp ')'                       (111)
	Exp -> transpose '(' NaturalInt ',' SignedInt ',' Exp ')'   (112)
	Exp -> split '(' '(' Exps ')' ',' Exp ')'          (113)
	Exp -> concat '(' Exp ',' Exps ')'                 (114)
	Exp -> reduce '(' FunAbstr ',' Exp ',' Exp ')'     (115)
	Exp -> map '(' FunAbstr ',' Exp ')'                (116)
	Exp -> scan '(' FunAbstr ',' Exp ',' Exp ')'       (117)
	Exp -> zip '(' Exps2 ')'                           (118)
	Exp -> unzip '(' Exp ')'                           (119)
	Exp -> filter '(' FunAbstr ',' Exp ')'             (120)
	Exp -> partition '(' FunAbstrsThenExp ')'          (121)
	Exp -> redomap '(' FunAbstr ',' FunAbstr ',' Exp ',' Exp ')'   (122)
	Exp -> zipWith '(' FunAbstr ',' Exps2 ')'          (123)
	Exp -> concatMap '(' FunAbstr ',' Exp ',' Exps ')'   (124)
	Exp -> concatMap '(' FunAbstr ',' Exp ')'          (125)
	Exp -> copy '(' Exp ')'                            (126)
	Exp -> '(' Exp ')'                                 (127)
	Exp -> let Id '=' Exp in Exp                       (128)
	Exp -> let '_' '=' Exp in Exp                      (129)
	Exp -> let '{' TupIds '}' '=' Exp in Exp           (130)
	Exp -> let Id '=' Id with Index '<-' Exp in Exp    (131)
	Exp -> let Id Index '=' Exp in Exp                 (132)
	Exp -> let Id '[' ']' '=' Exp in Exp               (133)
	Exp -> Id Index                                    (134)
	Exp -> loop '(' TupId ')' '=' for Id '<' Exp do Exp in Exp   (135)
	Exp -> loop '(' TupId '=' Exp ')' '=' for Id '<' Exp do Exp in Exp   (136)
	Exp -> loop '(' TupId ')' '=' while Exp do Exp in Exp   (137)
	Exp -> loop '(' TupId '=' Exp ')' '=' while Exp do Exp in Exp   (138)
	Exp -> streamMap '(' FunAbstr ',' Exp ')'          (139)
	Exp -> streamMapMax '(' FunAbstr ',' Exp ')'       (140)
	Exp -> streamMapPer '(' FunAbstr ',' Exp ')'       (141)
	Exp -> streamMapPerMax '(' FunAbstr ',' Exp ')'    (142)
	Exp -> streamRed '(' FunAbstr ',' FunAbstr ',' Exp ',' Exp ')'   (143)
	Exp -> streamRedMax '(' FunAbstr ',' FunAbstr ',' Exp ',' Exp ')'   (144)
	Exp -> streamRedPer '(' FunAbstr ',' FunAbstr ',' Exp ',' Exp ')'   (145)
	Exp -> streamRedPerMax '(' FunAbstr ',' FunAbstr ',' Exp ',' Exp ')'   (146)
	Exp -> streamSeq '(' FunAbstr ',' Exp ',' Exp ')'   (147)
	Exp -> streamSeqMax '(' FunAbstr ',' Exp ',' Exp ')'   (148)
	Index -> '[' Exps ']'                              (149)
	Exps -> Exp ',' Exps                               (150)
	Exps -> Exp                                        (151)
	Exps2 -> Exp ',' Exps2                             (152)
	Exps2 -> Exp ',' Exp                               (153)
	TupleExp -> '{' Exps '}'                           (154)
	TupleExp -> '{' '}'                                (155)
	Id -> id                                           (156)
	TupIds -> TupId ',' TupIds                         (157)
	TupIds -> TupId                                    (158)
	TupIds ->                                          (159)
	TupId -> id                                        (160)
	TupId -> '_'                                       (161)
	TupId -> '{' TupIds '}'                            (162)
	FunAbstr -> fn Type '(' TypeIds ')' '=>' Exp       (163)
	FunAbstr -> id '(' Exps ')'                        (164)
	FunAbstr -> id '(' ')'                             (165)
	FunAbstr -> id                                     (166)
	FunAbstr -> '-' Exp                                (167)
	FunAbstr -> '-'                                    (168)
	FunAbstr -> Exp '-'                                (169)
	FunAbstr -> BinOp Exp                              (170)
	FunAbstr -> Exp BinOp                              (171)
	FunAbstr -> BinOp                                  (172)
	FunAbstr -> UnOp                                   (173)
	FunAbstrsThenExp -> FunAbstr ',' Exp               (174)
	FunAbstrsThenExp -> FunAbstr ',' FunAbstrsThenExp   (175)
	Value -> IntValue                                  (176)
	Value -> RealValue                                 (177)
	Value -> CharValue                                 (178)
	Value -> StringValue                               (179)
	Value -> LogValue                                  (180)
	Value -> ArrayValue                                (181)
	Value -> TupleValue                                (182)
	CatValues -> Value CatValues                       (183)
	CatValues ->                                       (184)
	SignedInt -> intlit                                (185)
	SignedInt -> '-' intlit                            (186)
	NaturalInt -> intlit                               (187)
	NaturalInts -> intlit                              (188)
	NaturalInts -> intlit ',' NaturalInts              (189)
	IntValue -> intlit                                 (190)
	IntValue -> '-' intlit                             (191)
	RealValue -> reallit                               (192)
	RealValue -> '-' reallit                           (193)
	CharValue -> charlit                               (194)
	StringValue -> stringlit                           (195)
	LogValue -> true                                   (196)
	LogValue -> false                                  (197)
	CertValue -> checked                               (198)
	ArrayValue -> '[' Value ']'                        (199)
	ArrayValue -> '[' Value ',' Values ']'             (200)
	ArrayValue -> empty '(' Type ')'                   (201)
	TupleValue -> '{' Values '}'                       (202)
	Values -> Value ',' Values                         (203)
	Values -> Value                                    (204)
	Values ->                                          (205)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	if             { L $$ IF }
	then           { L $$ THEN }
	else           { L $$ ELSE }
	let            { L $$ LET }
	loop           { L $$ LOOP }
	in             { L $$ IN }
	int            { L $$ INT }
	bool           { L $$ BOOL }
	cert           { L $$ CERT }
	char           { L $$ CHAR }
	real           { L $$ REAL }
	id             { L _ (ID _) }
	intlit         { L _ (INTLIT _) }
	reallit        { L _ (REALLIT _) }
	stringlit      { L _ (STRINGLIT _) }
	charlit        { L _ (CHARLIT _) }
	'+'            { L $$ PLUS }
	'-'            { L $$ MINUS }
	'*'            { L $$ TIMES }
	'/'            { L $$ DIVIDE }
	'%'            { L $$ MOD }
	'='            { L $$ EQU }
	'=='           { L $$ EQU2 }
	'<'            { L $$ LTH }
	'>'            { L $$ GTH }
	'<='           { L $$ LEQ }
	'>='           { L $$ GEQ }
	pow            { L $$ POW }
	'<<'           { L $$ SHIFTL }
	'>>'           { L $$ SHIFTR }
	'|'            { L $$ BOR }
	'&'            { L $$ BAND }
	'^'            { L $$ XOR }
	'('            { L $$ LPAR }
	')'            { L $$ RPAR }
	'['            { L $$ LBRACKET }
	']'            { L $$ RBRACKET }
	'{'            { L $$ LCURLY }
	'}'            { L $$ RCURLY }
	','            { L $$ COMMA }
	'_'            { L $$ UNDERSCORE }
	'!'            { L $$ BANG }
	fun            { L $$ FUN }
	fn             { L $$ FN }
	'=>'           { L $$ ARROW }
	'<-'           { L $$ SETTO }
	for            { L $$ FOR }
	do             { L $$ DO }
	with           { L $$ WITH }
	iota           { L $$ IOTA }
	size           { L $$ SIZE }
	replicate      { L $$ REPLICATE }
	map            { L $$ MAP }
	concatMap      { L $$ CONCATMAP }
	reduce         { L $$ REDUCE }
	reshape        { L $$ RESHAPE }
	rearrange      { L $$ REARRANGE }
	transpose      { L $$ TRANSPOSE }
	zipWith        { L $$ ZIPWITH }
	zip            { L $$ ZIP }
	unzip          { L $$ UNZIP }
	scan           { L $$ SCAN }
	split          { L $$ SPLIT }
	concat         { L $$ CONCAT }
	filter         { L $$ FILTER }
	partition      { L $$ PARTITION }
	redomap        { L $$ REDOMAP }
	true           { L $$ TRUE }
	false          { L $$ FALSE }
	checked        { L $$ CHECKED }
	'~'            { L $$ TILDE }
	abs            { L $$ ABS }
	signum         { L $$ SIGNUM }
	'&&'           { L $$ AND }
	'||'           { L $$ OR }
	op             { L $$ OP }
	empty          { L $$ EMPTY }
	copy           { L $$ COPY }
	while          { L $$ WHILE }
	streamMap      { L $$ STREAM_MAP }
	streamMapMax   { L $$ STREAM_MAPMAX }
	streamMapPer   { L $$ STREAM_MAPPER }
	streamMapPerMax{ L $$ STREAM_MAPPERMAX }
	streamRed      { L $$ STREAM_RED }
	streamRedMax   { L $$ STREAM_REDMAX }
	streamRedPer   { L $$ STREAM_REDPER }
	streamRedPerMax{ L $$ STREAM_REDPERMAX }
	streamSeq      { L $$ STREAM_SEQ }
	streamSeqMax   { L $$ STREAM_SEQMAX }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_prog     rule  0
	%start_expression rule  1
	%start_pattern  rule  2
	%start_lambda   rule  3
	%start_futharktype rule  4
	%start_intValue rule  5
	%start_boolValue rule  6
	%start_charValue rule  7
	%start_certValue rule  8
	%start_stringValue rule  9
	%start_arrayValue rule  10
	%start_tupleValue rule  11
	%start_anyValue rule  12
	%start_anyValues rule  13
	Prog            rule  14
	BinOp           rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	UnOp            rules 32, 33, 34, 35
	FunDecs         rules 36, 37
	Fun             rules 38, 39
	Uniqueness      rules 40, 41
	Type            rules 42, 43, 44
	DimDecl         rules 45, 46, 47
	ArrayType       rules 48, 49
	BasicArrayRowType rules 50, 51
	TupleArrayRowType rules 52, 53
	TupleArrayElemTypes rules 54, 55
	TupleArrayElemType rules 56, 57, 58
	BasicType       rules 59, 60, 61, 62, 63
	Types           rules 64, 65, 66
	TypeIds         rules 67, 68
	Exp             rules 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148
	Index           rule  149
	Exps            rules 150, 151
	Exps2           rules 152, 153
	TupleExp        rules 154, 155
	Id              rule  156
	TupIds          rules 157, 158, 159
	TupId           rules 160, 161, 162
	FunAbstr        rules 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173
	FunAbstrsThenExp rules 174, 175
	Value           rules 176, 177, 178, 179, 180, 181, 182
	CatValues       rules 183, 184
	SignedInt       rules 185, 186
	NaturalInt      rule  187
	NaturalInts     rules 188, 189
	IntValue        rules 190, 191
	RealValue       rules 192, 193
	CharValue       rule  194
	StringValue     rule  195
	LogValue        rules 196, 197
	CertValue       rule  198
	ArrayValue      rules 199, 200, 201
	TupleValue      rule  202
	Values          rules 203, 204, 205

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	fun            shift, and enter state 16

	Prog           goto state 141
	FunDecs        goto state 15

State 1


	if             shift, and enter state 63
	let            shift, and enter state 64
	loop           shift, and enter state 65
	id             shift, and enter state 135
	intlit         shift, and enter state 67
	reallit        shift, and enter state 68
	stringlit      shift, and enter state 69
	charlit        shift, and enter state 70
	'-'            shift, and enter state 136
	'('            shift, and enter state 87
	'['            shift, and enter state 88
	'{'            shift, and enter state 89
	'!'            shift, and enter state 137
	iota           shift, and enter state 92
	size           shift, and enter state 93
	replicate      shift, and enter state 94
	map            shift, and enter state 95
	concatMap      shift, and enter state 96
	reduce         shift, and enter state 97
	reshape        shift, and enter state 98
	rearrange      shift, and enter state 99
	transpose      shift, and enter state 100
	zipWith        shift, and enter state 101
	zip            shift, and enter state 102
	unzip          shift, and enter state 103
	scan           shift, and enter state 104
	split          shift, and enter state 105
	concat         shift, and enter state 106
	filter         shift, and enter state 107
	partition      shift, and enter state 108
	redomap        shift, and enter state 109
	true           shift, and enter state 110
	false          shift, and enter state 111
	checked        shift, and enter state 112
	'~'            shift, and enter state 138
	abs            shift, and enter state 139
	signum         shift, and enter state 140
	empty          shift, and enter state 118
	copy           shift, and enter state 119
	streamMap      shift, and enter state 120
	streamMapMax   shift, and enter state 121
	streamMapPer   shift, and enter state 122
	streamMapPerMaxshift, and enter state 123
	streamRed      shift, and enter state 124
	streamRedMax   shift, and enter state 125
	streamRedPer   shift, and enter state 126
	streamRedPerMaxshift, and enter state 127
	streamSeq      shift, and enter state 128
	streamSeqMax   shift, and enter state 129

	Exp            goto state 134
	TupleExp       goto state 60
	Id             goto state 61

State 2


	id             shift, and enter state 131
	'{'            shift, and enter state 132
	'_'            shift, and enter state 133

	TupId          goto state 130

State 3


	if             shift, and enter state 63
	let            shift, and enter state 64
	loop           shift, and enter state 65
	id             shift, and enter state 66
	intlit         shift, and enter state 67
	reallit        shift, and enter state 68
	stringlit      shift, and enter state 69
	charlit        shift, and enter state 70
	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'*'            shift, and enter state 73
	'/'            shift, and enter state 74
	'%'            shift, and enter state 75
	'=='           shift, and enter state 76
	'<'            shift, and enter state 77
	'>'            shift, and enter state 78
	'<='           shift, and enter state 79
	'>='           shift, and enter state 80
	pow            shift, and enter state 81
	'<<'           shift, and enter state 82
	'>>'           shift, and enter state 83
	'|'            shift, and enter state 84
	'&'            shift, and enter state 85
	'^'            shift, and enter state 86
	'('            shift, and enter state 87
	'['            shift, and enter state 88
	'{'            shift, and enter state 89
	'!'            shift, and enter state 90
	fn             shift, and enter state 91
	iota           shift, and enter state 92
	size           shift, and enter state 93
	replicate      shift, and enter state 94
	map            shift, and enter state 95
	concatMap      shift, and enter state 96
	reduce         shift, and enter state 97
	reshape        shift, and enter state 98
	rearrange      shift, and enter state 99
	transpose      shift, and enter state 100
	zipWith        shift, and enter state 101
	zip            shift, and enter state 102
	unzip          shift, and enter state 103
	scan           shift, and enter state 104
	split          shift, and enter state 105
	concat         shift, and enter state 106
	filter         shift, and enter state 107
	partition      shift, and enter state 108
	redomap        shift, and enter state 109
	true           shift, and enter state 110
	false          shift, and enter state 111
	checked        shift, and enter state 112
	'~'            shift, and enter state 113
	abs            shift, and enter state 114
	signum         shift, and enter state 115
	'&&'           shift, and enter state 116
	'||'           shift, and enter state 117
	empty          shift, and enter state 118
	copy           shift, and enter state 119
	streamMap      shift, and enter state 120
	streamMapMax   shift, and enter state 121
	streamMapPer   shift, and enter state 122
	streamMapPerMaxshift, and enter state 123
	streamRed      shift, and enter state 124
	streamRedMax   shift, and enter state 125
	streamRedPer   shift, and enter state 126
	streamRedPerMaxshift, and enter state 127
	streamSeq      shift, and enter state 128
	streamSeqMax   shift, and enter state 129

	BinOp          goto state 57
	UnOp           goto state 58
	Exp            goto state 59
	TupleExp       goto state 60
	Id             goto state 61
	FunAbstr       goto state 62

State 4


	int            shift, and enter state 50
	bool           shift, and enter state 51
	cert           shift, and enter state 52
	char           shift, and enter state 53
	real           shift, and enter state 54
	'*'            shift, and enter state 55
	'['            reduce using rule 41
	'{'            shift, and enter state 56

	Uniqueness     goto state 46
	Type           goto state 47
	ArrayType      goto state 48
	BasicType      goto state 49

State 5


	intlit         shift, and enter state 26
	'-'            shift, and enter state 45

	IntValue       goto state 44

State 6


	true           shift, and enter state 33
	false          shift, and enter state 34

	LogValue       goto state 43

State 7


	charlit        shift, and enter state 29

	CharValue      goto state 42

State 8


	checked        shift, and enter state 41

	CertValue      goto state 40

State 9


	stringlit      shift, and enter state 28

	StringValue    goto state 39

State 10


	'['            shift, and enter state 31
	empty          shift, and enter state 35

	ArrayValue     goto state 38

State 11


	'{'            shift, and enter state 32

	TupleValue     goto state 37

State 12


	intlit         shift, and enter state 26
	reallit        shift, and enter state 27
	stringlit      shift, and enter state 28
	charlit        shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'{'            shift, and enter state 32
	true           shift, and enter state 33
	false          shift, and enter state 34
	empty          shift, and enter state 35

	Value          goto state 36
	IntValue       goto state 19
	RealValue      goto state 20
	CharValue      goto state 21
	StringValue    goto state 22
	LogValue       goto state 23
	ArrayValue     goto state 24
	TupleValue     goto state 25

State 13


	intlit         shift, and enter state 26
	reallit        shift, and enter state 27
	stringlit      shift, and enter state 28
	charlit        shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'{'            shift, and enter state 32
	true           shift, and enter state 33
	false          shift, and enter state 34
	empty          shift, and enter state 35
	%eof           reduce using rule 184

	Value          goto state 17
	CatValues      goto state 18
	IntValue       goto state 19
	RealValue      goto state 20
	CharValue      goto state 21
	StringValue    goto state 22
	LogValue       goto state 23
	ArrayValue     goto state 24
	TupleValue     goto state 25

State 14


	fun            shift, and enter state 16

	FunDecs        goto state 15

State 15

	Prog -> FunDecs .                                   (rule 14)

	%eof           reduce using rule 14


State 16

	FunDecs -> fun . Fun FunDecs                        (rule 36)
	FunDecs -> fun . Fun                                (rule 37)

	int            shift, and enter state 50
	bool           shift, and enter state 51
	cert           shift, and enter state 52
	char           shift, and enter state 53
	real           shift, and enter state 54
	'*'            shift, and enter state 55
	'['            reduce using rule 41
	'{'            shift, and enter state 56

	Fun            goto state 244
	Uniqueness     goto state 46
	Type           goto state 245
	ArrayType      goto state 48
	BasicType      goto state 49

State 17

	CatValues -> Value . CatValues                      (rule 183)

	intlit         shift, and enter state 26
	reallit        shift, and enter state 27
	stringlit      shift, and enter state 28
	charlit        shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'{'            shift, and enter state 32
	true           shift, and enter state 33
	false          shift, and enter state 34
	empty          shift, and enter state 35
	%eof           reduce using rule 184

	Value          goto state 17
	CatValues      goto state 243
	IntValue       goto state 19
	RealValue      goto state 20
	CharValue      goto state 21
	StringValue    goto state 22
	LogValue       goto state 23
	ArrayValue     goto state 24
	TupleValue     goto state 25

State 18

	%start_anyValues -> CatValues .                     (rule 13)

	%eof           accept


State 19

	Value -> IntValue .                                 (rule 176)

	intlit         reduce using rule 176
	reallit        reduce using rule 176
	stringlit      reduce using rule 176
	charlit        reduce using rule 176
	'-'            reduce using rule 176
	'['            reduce using rule 176
	']'            reduce using rule 176
	'{'            reduce using rule 176
	'}'            reduce using rule 176
	','            reduce using rule 176
	true           reduce using rule 176
	false          reduce using rule 176
	empty          reduce using rule 176
	%eof           reduce using rule 176


State 20

	Value -> RealValue .                                (rule 177)

	intlit         reduce using rule 177
	reallit        reduce using rule 177
	stringlit      reduce using rule 177
	charlit        reduce using rule 177
	'-'            reduce using rule 177
	'['            reduce using rule 177
	']'            reduce using rule 177
	'{'            reduce using rule 177
	'}'            reduce using rule 177
	','            reduce using rule 177
	true           reduce using rule 177
	false          reduce using rule 177
	empty          reduce using rule 177
	%eof           reduce using rule 177


State 21

	Value -> CharValue .                                (rule 178)

	intlit         reduce using rule 178
	reallit        reduce using rule 178
	stringlit      reduce using rule 178
	charlit        reduce using rule 178
	'-'            reduce using rule 178
	'['            reduce using rule 178
	']'            reduce using rule 178
	'{'            reduce using rule 178
	'}'            reduce using rule 178
	','            reduce using rule 178
	true           reduce using rule 178
	false          reduce using rule 178
	empty          reduce using rule 178
	%eof           reduce using rule 178


State 22

	Value -> StringValue .                              (rule 179)

	intlit         reduce using rule 179
	reallit        reduce using rule 179
	stringlit      reduce using rule 179
	charlit        reduce using rule 179
	'-'            reduce using rule 179
	'['            reduce using rule 179
	']'            reduce using rule 179
	'{'            reduce using rule 179
	'}'            reduce using rule 179
	','            reduce using rule 179
	true           reduce using rule 179
	false          reduce using rule 179
	empty          reduce using rule 179
	%eof           reduce using rule 179


State 23

	Value -> LogValue .                                 (rule 180)

	intlit         reduce using rule 180
	reallit        reduce using rule 180
	stringlit      reduce using rule 180
	charlit        reduce using rule 180
	'-'            reduce using rule 180
	'['            reduce using rule 180
	']'            reduce using rule 180
	'{'            reduce using rule 180
	'}'            reduce using rule 180
	','            reduce using rule 180
	true           reduce using rule 180
	false          reduce using rule 180
	empty          reduce using rule 180
	%eof           reduce using rule 180


State 24

	Value -> ArrayValue .                               (rule 181)

	intlit         reduce using rule 181
	reallit        reduce using rule 181
	stringlit      reduce using rule 181
	charlit        reduce using rule 181
	'-'            reduce using rule 181
	'['            reduce using rule 181
	']'            reduce using rule 181
	'{'            reduce using rule 181
	'}'            reduce using rule 181
	','            reduce using rule 181
	true           reduce using rule 181
	false          reduce using rule 181
	empty          reduce using rule 181
	%eof           reduce using rule 181


State 25

	Value -> TupleValue .                               (rule 182)

	intlit         reduce using rule 182
	reallit        reduce using rule 182
	stringlit      reduce using rule 182
	charlit        reduce using rule 182
	'-'            reduce using rule 182
	'['            reduce using rule 182
	']'            reduce using rule 182
	'{'            reduce using rule 182
	'}'            reduce using rule 182
	','            reduce using rule 182
	true           reduce using rule 182
	false          reduce using rule 182
	empty          reduce using rule 182
	%eof           reduce using rule 182


State 26

	IntValue -> intlit .                                (rule 190)

	intlit         reduce using rule 190
	reallit        reduce using rule 190
	stringlit      reduce using rule 190
	charlit        reduce using rule 190
	'-'            reduce using rule 190
	'['            reduce using rule 190
	']'            reduce using rule 190
	'{'            reduce using rule 190
	'}'            reduce using rule 190
	','            reduce using rule 190
	true           reduce using rule 190
	false          reduce using rule 190
	empty          reduce using rule 190
	%eof           reduce using rule 190


State 27

	RealValue -> reallit .                              (rule 192)

	intlit         reduce using rule 192
	reallit        reduce using rule 192
	stringlit      reduce using rule 192
	charlit        reduce using rule 192
	'-'            reduce using rule 192
	'['            reduce using rule 192
	']'            reduce using rule 192
	'{'            reduce using rule 192
	'}'            reduce using rule 192
	','            reduce using rule 192
	true           reduce using rule 192
	false          reduce using rule 192
	empty          reduce using rule 192
	%eof           reduce using rule 192


State 28

	StringValue -> stringlit .                          (rule 195)

	intlit         reduce using rule 195
	reallit        reduce using rule 195
	stringlit      reduce using rule 195
	charlit        reduce using rule 195
	'-'            reduce using rule 195
	'['            reduce using rule 195
	']'            reduce using rule 195
	'{'            reduce using rule 195
	'}'            reduce using rule 195
	','            reduce using rule 195
	true           reduce using rule 195
	false          reduce using rule 195
	empty          reduce using rule 195
	%eof           reduce using rule 195


State 29

	CharValue -> charlit .                              (rule 194)

	intlit         reduce using rule 194
	reallit        reduce using rule 194
	stringlit      reduce using rule 194
	charlit        reduce using rule 194
	'-'            reduce using rule 194
	'['            reduce using rule 194
	']'            reduce using rule 194
	'{'            reduce using rule 194
	'}'            reduce using rule 194
	','            reduce using rule 194
	true           reduce using rule 194
	false          reduce using rule 194
	empty          reduce using rule 194
	%eof           reduce using rule 194


State 30

	IntValue -> '-' . intlit                            (rule 191)
	RealValue -> '-' . reallit                          (rule 193)

	intlit         shift, and enter state 237
	reallit        shift, and enter state 242


State 31

	ArrayValue -> '[' . Value ']'                       (rule 199)
	ArrayValue -> '[' . Value ',' Values ']'            (rule 200)

	intlit         shift, and enter state 26
	reallit        shift, and enter state 27
	stringlit      shift, and enter state 28
	charlit        shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'{'            shift, and enter state 32
	true           shift, and enter state 33
	false          shift, and enter state 34
	empty          shift, and enter state 35

	Value          goto state 241
	IntValue       goto state 19
	RealValue      goto state 20
	CharValue      goto state 21
	StringValue    goto state 22
	LogValue       goto state 23
	ArrayValue     goto state 24
	TupleValue     goto state 25

State 32

	TupleValue -> '{' . Values '}'                      (rule 202)

	intlit         shift, and enter state 26
	reallit        shift, and enter state 27
	stringlit      shift, and enter state 28
	charlit        shift, and enter state 29
	'-'            shift, and enter state 30
	'['            shift, and enter state 31
	'{'            shift, and enter state 32
	'}'            reduce using rule 205
	true           shift, and enter state 33
	false          shift, and enter state 34
	empty          shift, and enter state 35

	Value          goto state 239
	IntValue       goto state 19
	RealValue      goto state 20
	CharValue      goto state 21
	StringValue    goto state 22
	LogValue       goto state 23
	ArrayValue     goto state 24
	TupleValue     goto state 25
	Values         goto state 240

State 33

	LogValue -> true .                                  (rule 196)

	intlit         reduce using rule 196
	reallit        reduce using rule 196
	stringlit      reduce using rule 196
	charlit        reduce using rule 196
	'-'            reduce using rule 196
	'['            reduce using rule 196
	']'            reduce using rule 196
	'{'            reduce using rule 196
	'}'            reduce using rule 196
	','            reduce using rule 196
	true           reduce using rule 196
	false          reduce using rule 196
	empty          reduce using rule 196
	%eof           reduce using rule 196


State 34

	LogValue -> false .                                 (rule 197)

	intlit         reduce using rule 197
	reallit        reduce using rule 197
	stringlit      reduce using rule 197
	charlit        reduce using rule 197
	'-'            reduce using rule 197
	'['            reduce using rule 197
	']'            reduce using rule 197
	'{'            reduce using rule 197
	'}'            reduce using rule 197
	','            reduce using rule 197
	true           reduce using rule 197
	false          reduce using rule 197
	empty          reduce using rule 197
	%eof           reduce using rule 197


State 35

	ArrayValue -> empty . '(' Type ')'                  (rule 201)

	'('            shift, and enter state 238


State 36

	%start_anyValue -> Value .                          (rule 12)

	%eof           accept


State 37

	%start_tupleValue -> TupleValue .                   (rule 11)

	%eof           accept


State 38

	%start_arrayValue -> ArrayValue .                   (rule 10)

	%eof           accept


State 39

	%start_stringValue -> StringValue .                 (rule 9)

	%eof           accept


State 40

	%start_certValue -> CertValue .                     (rule 8)

	%eof           accept


State 41

	CertValue -> checked .                              (rule 198)

	%eof           reduce using rule 198


State 42

	%start_charValue -> CharValue .                     (rule 7)

	%eof           accept


State 43

	%start_boolValue -> LogValue .                      (rule 6)

	%eof           accept


State 44
